<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MetaWear Exercise Analyst</string>
    <string name="access_token_shared_preferences">access_token_shared_preferences</string>
    <string name="notification_info">Exercise Analyst is running</string>
    <string name="train">Train</string>
    <string name="gather_data">Gather data (debug)</string>
    <string name="wipe_db">Wipe local DB (debug)</string>
    <string name="start_training">Start training</string>
    <string name="loading_training">Connecting to device…</string>
    <string name="finish_training">Finish training</string>
    <string name="device_mac_address_hint">AB:CD:EF:GH:IJ:01</string>
    <string name="stop_meta_motion_service">Stop exercise session</string>
    <string name="start_meta_motion_service">Start exercise session</string>
    <string name="open_wbv">Your sessions</string>
    <string name="device_mac_address">Bluetooth disabled</string>
    <string name="permissions_dialog_rationale">Location permissions is required for BLE feature</string>
    <string name="permissions_dialog_allow">Allow</string>
    <string name="permissions_dialog_deny">Deny</string>
    <string name="title_activity_session_tagging">SessionTaggingActivity</string>
    <string name="welcome">Welcome to\nExercise Analyst</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email address</string>
    <string name="user_credentials_hint">Please provide your credentials</string>
    <string name="email_hint">address@mail.com</string>
    <string name="password">Password</string>
    <string name="password_hint">Your secret password</string>
    <string name="user_data_hint">Please provide your data for registration</string>
    <string name="password_repeat">Repeat password</string>
    <string name="height_cm">Height [cm]</string>
    <string name="height_hint">180</string>
    <string name="weight_hint">75</string>
    <string name="weight_kg">Weight [kg]</string>
    <string name="age">Age</string>
    <string name="age_hint">28</string>
    <string name="next_arrow"><![CDATA[>]]></string>
    <string name="gender">Gender</string>
    <string name="previous_arrow"><![CDATA[<]]></string>
    <string name="switch_account">Switch account</string>
    <string name="wipe_local_db">Clear measurement cache</string>
    <string name="current_session_title">Current tagging session</string>
    <string name="wearable_start_title">Wearable disconnected</string>
    <string name="initial_name_wearable">MetaWear</string>
    <string name="initial_mac_wearable">F7:D5:EE:12:84:4E</string>

    <string-array name="gender_items">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_web_view_stats">WebViewStats</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="debug_mode">Debug mode</string>

</resources>