<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MenuActivity">

    <TextView
        android:id="@+id/tv_device_mac_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:text="@string/device_mac_address"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_device_mac_address"
        android:layout_width="308dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:digits="0123456789ABCDEFabcdef:"
        android:hint="@string/device_mac_address_hint"
        android:inputType="textCapCharacters"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_device_mac_address" />

    <Button
        android:id="@+id/btn_start_meta_motion"
        android:layout_width="308dp"
        android:layout_height="50dp"
        android:layout_marginTop="324dp"
        android:text="@string/gather_data"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#F4FF81"
        app:strokeWidth="2dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_open_webview"
        android:layout_width="144dp"
        android:layout_height="100dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="208dp"
        android:text="@string/open_wbv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/et_device_mac_address"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_wipe_db"
        android:layout_width="308dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/wipe_db"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_meta_motion"
        app:strokeColor="#F4FF81"
        app:strokeWidth="2dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_start_training"
        android:layout_width="144dp"
        android:layout_height="100dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="20dp"
        android:text="@string/start_training"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_open_webview"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/start_training" />

</androidx.constraintlayout.widget.ConstraintLayout>